--- a/SCSS/_NAAT-KHUWAN-NAME.scss
+++ b/SCSS/_NAAT-KHUWAN-NAME.scss
@@ -24,11 +24,13 @@ body{
           color: $gray-color;
           font-size: 25px;
           padding: 40px 0;
+
           a{
             @include anchor;
             width: 100%;
             display: inline-block;
             padding: 40px 0;
+            text-align: right !important;
           }
         }
         li:last-child{
