--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -76,7 +76,8 @@ body {
           color: #333;
           width: 100%;
           display: inline-block;
-          padding: 40px 0; }
+          padding: 40px 0;
+          text-align: right !important; }
           body .middle .name-box ul li a:hover, body .middle .name-box ul li a:focus {
             text-decoration: none !important; }
       body .middle .name-box ul li:last-child {
