--- a/sass/_naat-khuwan-name.scss
+++ b/sass/_naat-khuwan-name.scss
@@ -6,8 +6,7 @@ body{
       font-size: 45px;
       color: $light-gray-color;
       font-family: 'Lateef', cursive !important;
-      position: relative;
-      top: -35px;
+      margin: 25px 0;
       font-weight: 700;
     }
     .name-box{
