--- a/sass/_naat-khuwan-name.scss
+++ b/sass/_naat-khuwan-name.scss
@@ -5,7 +5,7 @@ body{
     h1{
       font-size: 45px;
       color: $light-gray-color;
-      font-family: 'Lateef', cursive !important;
+      font-family: myFirstFont !important;
       margin: 25px 0;
       font-weight: 700;
     }
