--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -29,7 +29,7 @@
         width: 100%;
         font-size: 28px;
         color: $gray-color;
-        font-family: 'Lateef', cursive !important;
+        font-family: myFirstFont !important;
       }
     }
   }
