--- a/sass/_qasiday.scss
+++ b/sass/_qasiday.scss
@@ -54,6 +54,9 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+  h1{
+    font-size: 50px;
+  }
   .qasida-box{
     background-size: cover !important;
   }
