--- a/sass/main.css
+++ b/sass/main.css
@@ -1,8 +1,5 @@
 .naat-template {
-  background: url("../images/naat-template.png") no-repeat;
-  height: 375px;
-  width: 100%;
-  margin-bottom: 45px; }
+  margin-bottom: 70px; }
 
 .middle a {
   color: #333; }
@@ -113,6 +110,9 @@ body {
   .left-border {
     border: none !important; } }
 @media (min-width: 768px) and (max-width: 991px) {
+  h1 {
+    font-size: 50px; }
+
   .qasida-box {
     background-size: cover !important; }
 
