--- a/sass/main.css
+++ b/sass/main.css
@@ -1,5 +1,5 @@
-.naat-template {
-  margin-bottom: 70px; }
+.naat-template img {
+  margin-bottom: 70px !important; }
 
 .middle a {
   color: #333; }
