--- a/sass/_naat-khuwan-name.scss
+++ b/sass/_naat-khuwan-name.scss
@@ -6,7 +6,7 @@ body{
       font-size: 45px;
       color: $light-gray-color;
       font-family: myFirstFont !important;
-      margin: 25px 0;
+      margin: 0 0 25px;
       font-weight: 700;
     }
     .name-box{
@@ -39,3 +39,21 @@ body{
     }
   }
 }
+//.circle-line{
+//  display: inline-block;
+//  width: 20%;
+//  margin: 0 auto;
+//  border-bottom: 1px solid #000000;
+//  position: relative;
+//  top: -16px;
+//    &:before{
+//      content: "";
+//      border-radius: 50%;
+//      background: #000;
+//      border: 4px solid #e0e0e0;
+//      position: relative;
+//      padding: 0 8px;
+//      //left: 45%;
+//      top: 10px;
+//    }
+//}
