--- a/sass/_style.scss
+++ b/sass/_style.scss
@@ -1,12 +1,15 @@
 .naat-template{
  img{
-   margin-bottom: 70px !important;
+   width: 100%;
+   margin-bottom: 30px;
+   border-bottom: 1px solid #d3cbcb;
+   box-shadow: 0 1px 2px #333;
  }
 }
 .middle{
   a{
    @include anchor;
-    .naat-boxes{
+    .naat-boxe{
       border: 1px solid $pink-swan;
       border-radius: 2px;
       background: $white-color;
@@ -32,7 +35,7 @@
     width: 671px;
     height: 81px;
     font-size: 30px;
-    margin: 11px 0 70px;
+    margin: 11px 0 30px;
     text-transform: uppercase;
     box-shadow: 0 2px 5px $black-color;
     &:hover , &:focus , &:active{
